--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "concurrently": "^3.6.1",
     "express": "^4.16.3",
     "mongoose": "^5.2.5",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "path": "^0.12.7"
   }
 }
