--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-simple-sidenav": "^1.0.1",
+    "react-star-rating-component": "^1.4.1",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0"
