--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "concurrently": "^3.6.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
@@ -32,6 +33,10 @@
     "mongoose": "^5.2.5",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-grid-system": "^4.1.4",
+    "reactstrap": "^6.3.1"
   }
 }
